--- a/development/gitea/app.ini
+++ b/development/gitea/app.ini
@@ -11,10 +11,10 @@ TEMP_PATH = /data/gitea/uploads
 [server]
 APP_DATA_PATH    = /data/gitea
 SSH_DOMAIN       = git-server
-HTTP_PORT        = 3300
-ROOT_URL         = http://git.rapidpm.org:3300/
+HTTP_PORT        = 80
+ROOT_URL         = http://git.rapidpm.org/
 DISABLE_SSH      = false
-SSH_PORT         = 1022
+SSH_PORT         = 22
 DOMAIN           = git-server
 LFS_START_SERVER = true
 LFS_CONTENT_PATH = /data/gitea/lfs
