deactivated all services, start building virtual hosting

--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     container_name: git-server
     hostname: git-server
     image: gitea/gitea:${GIT_VERSION}
-#    privileged: true
+    privileged: true
     ports:
       - 80
       - 22
