--- a/development/gitea/app.ini
+++ b/development/gitea/app.ini
@@ -11,10 +11,10 @@ TEMP_PATH = /data/gitea/uploads
 [server]
 APP_DATA_PATH    = /data/gitea
 SSH_DOMAIN       = git.rapidpm.org
-HTTP_PORT        = 80
+HTTP_PORT        = 3000
 ROOT_URL         = http://git.rapidpm.org/
-DISABLE_SSH      = true
-SSH_PORT         = 22
+DISABLE_SSH      = false
+SSH_PORT         = 1022
 DOMAIN           = git.rapidpm.org
 LFS_START_SERVER = true
 LFS_CONTENT_PATH = /data/gitea/lfs
