--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -52,37 +52,41 @@ services:
     volumes:
       - $PWD/gitea/data:/data
       - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
-      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=git.rapidpm.org
     depends_on:
       - nginx-proxy
 
-#  drone-server:
-#    container_name: drone-server
-#    hostname: drone-server
-#    image: drone/drone:${DRONE_VERSION}
-#    privileged: true
-#    ports:
-#      - 8000:8000
+  drone-server:
+    container_name: drone-server
+    hostname: drone-server
+    image: drone/drone:${DRONE_VERSION}
+    privileged: true
+    ports:
+      - 8000
 #      - 9000:9000
-#    volumes:
-#      - ./droneio/drone:/var/lib/drone/
-#    depends_on:
-#      - git-server
-#      - nexus-server
-#    environment:
-#      - DRONE_DEBUG=true
-##      - DRONE_HOST=http://drone-server.home:8000
+    volumes:
+      - ./droneio/drone:/var/lib/drone/
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - nginx-proxy
+      - git-server
+      - nexus-server
+    environment:
+      - VIRTUAL_HOST=drone.rapidpm.org
+      - DRONE_DEBUG=true
+#      - DRONE_HOST=http://drone-server.home:8000
 #      - DRONE_HOST=http://${DRONE_DOCKER_EXTERNAL_IP}:8000
-#      - DRONE_OPEN=true
-#      - DRONE_SECRET=ok
-#      - DRONE_PLUGIN_PULL=true
-#      - DRONE_GOGS=true
-##      - DRONE_GOGS_URL=http://git-server.home:3300
+      - DRONE_HOST=http://${DRONE_DOCKER_EXTERNAL_IP}
+      - DRONE_OPEN=true
+      - DRONE_SECRET=ok
+      - DRONE_PLUGIN_PULL=true
+      - DRONE_GOGS=true
+#      - DRONE_GOGS_URL=http://git-server.home:3300
 #      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}:3300
-#      - DRONE_GOGS_PRIVATE_MODE=true
-#      - DRONE_GOGS_SKIP_VERIFY=false
+      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}
+      - DRONE_GOGS_PRIVATE_MODE=true
+      - DRONE_GOGS_SKIP_VERIFY=false
 #
 #  drone-agent-01:
 #    container_name: drone-agent-01
