--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -45,13 +45,14 @@ services:
     container_name: git-server
     hostname: git-server
     image: gitea/gitea:${GIT_VERSION}
-    privileged: true
+#    privileged: true
     ports:
       - 3000
-      - 22
+#      - 22
     volumes:
       - $PWD/gitea/data:/data
       - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=git.rapidpm.org
     depends_on:
@@ -64,7 +65,7 @@ services:
     privileged: true
     ports:
       - 8000
-#      - 9000:9000
+      - 9000
     volumes:
       - ./droneio/drone:/var/lib/drone/
       - /var/run/docker.sock:/var/run/docker.sock
@@ -77,14 +78,14 @@ services:
       - DRONE_DEBUG=true
 #      - DRONE_HOST=http://drone-server.home:8000
 #      - DRONE_HOST=http://${DRONE_DOCKER_EXTERNAL_IP}:8000
-      - DRONE_HOST=http://${DRONE_DOCKER_EXTERNAL_IP}
+      - DRONE_HOST=http://drone.rapidpm.org
       - DRONE_OPEN=true
       - DRONE_SECRET=ok
       - DRONE_PLUGIN_PULL=true
       - DRONE_GOGS=true
 #      - DRONE_GOGS_URL=http://git-server.home:3300
 #      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}:3300
-      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}
+      - DRONE_GOGS_URL=http://git.rapidpm.org
       - DRONE_GOGS_PRIVATE_MODE=true
       - DRONE_GOGS_SKIP_VERIFY=false
 #
