--- a/development/gitea/app.ini
+++ b/development/gitea/app.ini
@@ -10,12 +10,12 @@ TEMP_PATH = /data/gitea/uploads
 
 [server]
 APP_DATA_PATH    = /data/gitea
-SSH_DOMAIN       = git.rapidpm.org
+SSH_DOMAIN       = git-server
 HTTP_PORT        = 3000
 ROOT_URL         = http://git.rapidpm.org/
 DISABLE_SSH      = false
-SSH_PORT         = 22
-DOMAIN           = git.rapidpm.org
+SSH_PORT         = 1022
+DOMAIN           = git-server
 LFS_START_SERVER = true
 LFS_CONTENT_PATH = /data/gitea/lfs
 LFS_JWT_SECRET   = 5qMh-oasI0KAMlxuDLTm2xnEB39ug3oA16LFLyGCSm0
