deactivated all services, start building virtual hosting

--- a/development/.env
+++ b/development/.env
@@ -26,6 +26,6 @@ SELENOID_VER=1.6.1
 
 
 # YOU SHOULD CHANGE THIS IN PRODUCTION
-MINIO_USER_KEY=admin
-MINIO_PASSWD_KEY=passwd
+#MINIO_USER_KEY=admin
+#MINIO_PASSWD_KEY=passwd
 
