deactivated all services, start building virtual hosting

--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -48,8 +48,8 @@ services:
     ports:
       - 3000
     volumes:
-      - $PWD/gitea/data:/data
-      - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
+#      - $PWD/gitea/data:/data
+#      - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=git.rapidpm.org
