--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     ports:
       - 3000
     volumes:
-#      - $PWD/gitea/data:/data
+      - $PWD/gitea/data:/data
 #      - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
@@ -62,7 +62,7 @@ services:
     image: drone/drone:${DRONE_VERSION}
     ports:
       - 8000
-#      - 9000
+      - 9000
     volumes:
       - ./droneio/drone:/var/lib/drone/
       - /var/run/docker.sock:/var/run/docker.sock
@@ -80,7 +80,7 @@ services:
       - DRONE_SECRET=ok
       - DRONE_PLUGIN_PULL=true
       - DRONE_GOGS=true
-      - DRONE_GOGS_URL=http://git-server:3300
+      - DRONE_GOGS_URL=http://git-server:3000
 #      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}:3300
 #      - DRONE_GOGS_URL=http://git.rapidpm.org
       - DRONE_GOGS_PRIVATE_MODE=true
