--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -306,6 +306,7 @@ services:
       - 2375
     environment:
       - VIRTUAL_HOST=fn.rapidpm.org
+      - VIRTUAL_PORT=8080
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
