deactivated all services, start building virtual hosting

--- a/development/.env
+++ b/development/.env
@@ -8,15 +8,9 @@ NEXUS_VERSION=latest
 DNS_EXTERNAL_IP=8.8.8.8
 
 GIT_VERSION=latest
-GIT_DOCKER_EXTERNAL_IP=git.rapidpm.org
-#GIT_DOCKER_EXTERNAL_IP=192.168.0.100
-SELENOID_DOCKER_EXTERNAL_IP=selenoid.rapidpm.org
-#SELENOID_DOCKER_EXTERNAL_IP=192.168.0.100
 
 #DRONE_VERSION=0.8.2
 DRONE_VERSION=alpine
-DRONE_DOCKER_EXTERNAL_IP=drone.rapidpm.org
-#DRONE_DOCKER_EXTERNAL_IP=192.168.0.100
 #DRONE_DOCKER_SEC_TOKEN=
 
 
@@ -27,4 +21,14 @@ SELENOID_VER=1.6.1
 
 # YOU SHOULD CHANGE THIS IN PRODUCTION
 
-
+VIRTUAL_HOST_PORTAINER=portainer.rapidpm.org
+VIRTUAL_HOST_NEXUS=nexus.rapidpm.org
+VIRTUAL_HOST_GIT=git.rapidpm.org
+VIRTUAL_HOST_DRONE=drone.rapidpm.org
+VIRTUAL_HOST_SELENOID=selenoid.rapidpm.org
+VIRTUAL_HOST_SELENOID_UI=selenoid-ui.rapidpm.org
+VIRTUAL_HOST_ISSUES=issues.rapidpm.org
+VIRTUAL_HOST_REVIEW=review.rapidpm.org
+VIRTUAL_HOST_S3=s3.rapidpm.org
+VIRTUAL_HOST_FN=fn.rapidpm.org
+VIRTUAL_HOST_FN_UI=fn-ui.rapidpm.org
