--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -48,7 +48,8 @@ services:
       - 22
     volumes:
       - $PWD/gitea/data:/data
-      - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
+      # edit the domain in side this file first
+#      - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=${VIRTUAL_HOST_GIT}
