--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - $PWD/nginx/conf/etc/nginx/conf.d/my_proxy.conf:/etc/nginx/conf.d/my_proxy.conf
 
   portainer:
     container_name: portainer
