prepare version 00.07.04-RPM

--- a/development/.env
+++ b/development/.env
@@ -18,8 +18,13 @@ DRONE_VERSION=alpine
 #SELENOID_VER=1.4.3
 SELENOID_VER=1.6.1
 
+YOUTRACK_VERSION=2018.2.44329
+UPSOURCE_VERSION=2018.1.584
 
 # YOU SHOULD CHANGE THIS IN PRODUCTION
+
+MINIO_ACCESSKEY=change-me
+MINIO_SECRETKEY=change-me-even-more
 
 VIRTUAL_HOST_PORTAINER=portainer.rapidpm.org
 VIRTUAL_HOST_NEXUS=nexus.rapidpm.org
@@ -28,6 +33,7 @@ VIRTUAL_HOST_DRONE=drone.rapidpm.org
 VIRTUAL_HOST_SELENOID=selenoid.rapidpm.org
 VIRTUAL_HOST_SELENOID_UI=selenoid-ui.rapidpm.org
 VIRTUAL_HOST_ISSUES=issues.rapidpm.org
+VIRTUAL_HOST_OPENPROJECT=project.rapidpm.org
 VIRTUAL_HOST_REVIEW=review.rapidpm.org
 VIRTUAL_HOST_S3=s3.rapidpm.org
 VIRTUAL_HOST_FN=fn.rapidpm.org
