--- a/development/.env
+++ b/development/.env
@@ -38,3 +38,4 @@ VIRTUAL_HOST_REVIEW=review.rapidpm.org
 VIRTUAL_HOST_S3=s3.rapidpm.org
 VIRTUAL_HOST_FN=fn.rapidpm.org
 VIRTUAL_HOST_FN_UI=fn-ui.rapidpm.org
+VIRTUAL_HOST_GITLAB=gitlab.rapidpm.org
