--- a/development/.env
+++ b/development/.env
@@ -26,6 +26,9 @@ UPSOURCE_VERSION=2018.1.584
 MINIO_ACCESSKEY=change-me
 MINIO_SECRETKEY=change-me-even-more
 
+GITLAB_OMI_CONFIG=external_url 'gitlab.rapidpm.org'
+
+
 VIRTUAL_HOST_PORTAINER=portainer.rapidpm.org
 VIRTUAL_HOST_NEXUS=nexus.rapidpm.org
 VIRTUAL_HOST_GIT=git.rapidpm.org
