--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -296,8 +296,9 @@ services:
       hostname: gitlab
       environment:
       - VIRTUAL_HOST=${VIRTUAL_HOST_GITLAB}
-        GITLAB_OMNIBUS_CONFIG: |
-          external_url '${VIRTUAL_HOST_GITLAB}'
+      - GITLAB_OMNIBUS_CONFIG=${GITLAB_OMI_CONFIG}
+#      GITLAB_OMNIBUS_CONFIG: |
+#          external_url '${VIRTUAL_HOST_GITLAB}'
           # Add any other gitlab.rb configuration here, each on its own line
       ports:
         - 80:80
@@ -307,11 +308,6 @@ services:
         - $PWD/gitlab/config:/etc/gitlab
         - $PWD/gitlab/logs:/var/log/gitlab
         - $PWD/gitlab/data:/var/opt/gitlab
-
-
-
-
-
 
   minio:
     image: minio/minio
