customizing for hundt-consult.de

--- a/development/.env
+++ b/development/.env
@@ -1,4 +1,4 @@
-COMPOSE_PROJECT_NAME=vaadin
+COMPOSE_PROJECT_NAME=hundt-consult
 COMPOSE_API_VERSION=1.35
 DOCKER_API_VERSION=1.35
 
@@ -23,19 +23,20 @@ UPSOURCE_VERSION=2018.1.584
 
 # YOU SHOULD CHANGE THIS IN PRODUCTION
 
-MINIO_ACCESSKEY=change-me
-MINIO_SECRETKEY=change-me-even-more
+MINIO_ACCESSKEY=minio
+MINIO_SECRETKEY=on74avnqpwo4c
 
-VIRTUAL_HOST_PORTAINER=portainer.rapidpm.org
-VIRTUAL_HOST_NEXUS=nexus.rapidpm.org
-VIRTUAL_HOST_GIT=git.rapidpm.org
-VIRTUAL_HOST_DRONE=drone.rapidpm.org
-VIRTUAL_HOST_SELENOID=selenoid.rapidpm.org
-VIRTUAL_HOST_SELENOID_UI=selenoid-ui.rapidpm.org
-VIRTUAL_HOST_ISSUES=issues.rapidpm.org
-VIRTUAL_HOST_OPENPROJECT=project.rapidpm.org
-VIRTUAL_HOST_REVIEW=review.rapidpm.org
-VIRTUAL_HOST_S3=s3.rapidpm.org
-VIRTUAL_HOST_FN=fn.rapidpm.org
-VIRTUAL_HOST_FN_UI=fn-ui.rapidpm.org
-VIRTUAL_HOST_GITLAB=gitlab.rapidpm.org
+VIRTUAL_HOST_PORTAINER=portainer.hundt-consult.de
+VIRTUAL_HOST_NEXUS=nexus.hundt-consult.de
+VIRTUAL_HOST_GIT=git.hundt-consult.de
+VIRTUAL_HOST_DRONE=drone.hundt-consult.de
+VIRTUAL_HOST_SELENOID=selenoid.hundt-consult.de
+VIRTUAL_HOST_SELENOID_UI=selenoid-ui.hundt-consult.de
+VIRTUAL_HOST_ISSUES=issues.hundt-consult.de
+VIRTUAL_HOST_OPENPROJECT=project.hundt-consult.de
+VIRTUAL_HOST_REVIEW=review.hundt-consult.de
+VIRTUAL_HOST_S3=s3.hundt-consult.de
+VIRTUAL_HOST_FN=fn.hundt-consult.de
+VIRTUAL_HOST_FN_UI=fn-ui.hundt-consult.de
+VIRTUAL_HOST_GITLAB=gitlab.hundt-consult.de
+
