--- a/development/.env
+++ b/development/.env
@@ -1,4 +1,4 @@
-COMPOSE_PROJECT_NAME=hundt-consult
+#COMPOSE_PROJECT_NAME=development
 COMPOSE_API_VERSION=1.35
 DOCKER_API_VERSION=1.35
 
@@ -38,7 +38,7 @@ VIRTUAL_HOST_REVIEW=review.hundt-consult.de
 VIRTUAL_HOST_S3=s3.hundt-consult.de
 VIRTUAL_HOST_FN=fn.hundt-consult.de
 VIRTUAL_HOST_FN_UI=fn-ui.hundt-consult.de
-VIRTUAL_HOST_GITLAB=gitlab.hundt-consult.de
+VIRTUAL_HOST_GITLAB=dev.hundt-consult.de
 
-GITLAB_OMI_CONFIG=external_url 'gitlab.hundt-consult.de'
+GITLAB_OMI_CONFIG=external_url 'http://dev.hundt-consult.de'
 
