--- a/development/.env
+++ b/development/.env
@@ -42,3 +42,4 @@ VIRTUAL_HOST_GITLAB=dev.hundt-consult.de
 
 GITLAB_OMI_CONFIG=external_url 'http://dev.hundt-consult.de'
 
+LETSENCRYPT_EMAIL=dve@vergien.net
