--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ vaadin-dev-environment.iml
 gitea/data
 development/droneio/drone
 development/gitlab/
+
+development/nginx/certs
+development/nginx/etc
+development/nginx/conf/etc/nginx/conf.d/default.conf
