--- a/development/.env
+++ b/development/.env
@@ -42,3 +42,4 @@ VIRTUAL_HOST_S3=s3.rapidpm.org
 VIRTUAL_HOST_FN=fn.rapidpm.org
 VIRTUAL_HOST_FN_UI=fn-ui.rapidpm.org
 VIRTUAL_HOST_GITLAB=gitlab.rapidpm.org
+VIRTUAL_HOST_NEXTCLOUD=storage.rapidpm.org
