pull/push with ssh on port 2222

--- a/development/.env
+++ b/development/.env
@@ -40,6 +40,6 @@ VIRTUAL_HOST_FN=fn.hundt-consult.de
 VIRTUAL_HOST_FN_UI=fn-ui.hundt-consult.de
 VIRTUAL_HOST_GITLAB=dev.hundt-consult.de
 
-GITLAB_OMI_CONFIG=external_url 'http://dev.hundt-consult.de'
-
+GITLAB_OMI_CONFIG=external_url 'https://dev.hundt-consult.de'; nginx['listen_port'] = 80; nginx['listen_https'] = false; gitlab_rails['gitlab_shell_ssh_port'] = 2222;
+#GITLAB_OMI_CONFIG="external_url 'http://dev.hundt-consult.de'"
 LETSENCRYPT_EMAIL=dve@vergien.net
